Clip clip here, clip clip there...